# timescaledb

./: CHANGELOG.md  CMakeLists.txt  CMakeSettings.json
.github/: CLAUDE_AUTOMATION.md  gh_matrix_builder.py
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/scripts/: claude-analyze-failures.sh  claude-handle-pr-review.sh
.github/workflows/: claude-nightly-fix.yaml  claude-pr-review-handler.yaml  code_style.yaml  issue-labeler.yaml  linux-32bit-build-and-test.yaml  linux-build-and-test.yaml  memory-tests.yaml  pg_upgrade-test.yaml  pgspot.yaml  postgresql-build-and-cache.yaml  sqlsmith.yaml  (+3 more)
.unreleased/: pr_8754
cmake/: ScriptFiles.cmake
scripts/: clang_format_all.sh
sql/: CMakeLists.txt  cagg_utils.sql  chunk.sql  ddl_api.sql  ddl_experimental.sql  fdw.sql  hypertable.sql  installation_metadata.sql  maintenance_utils.sql  size_utils.sql  tables.sql  telemetry.sql  util_time.sql  uuidv7.sql  views.sql  views_experimental.sql
src/: CMakeLists.txt  bgw_launcher_interface.h  bgw_scheduler.c  build-defs.cmake  cache_invalidate.c  catalog.c  catalog.h  chunk.c  chunk.h  chunk_adaptive.c  chunk_cache.c  chunk_cache.h  chunk_constraint.c  chunk_constraint.h  chunk_dispatch.c  chunk_dispatch.h  chunk_dispatch_info.c  chunk_dispatch_info.h  chunk_dispatch_plan.c  chunk_dispatch_plan.h  chunk_dispatch_state.c  chunk_index.c  chunk_index.h  chunk_insert_state.c  chunk_scan.c  chunk_scan.h  chunk_server.c  chunk_server.h  chunk_tuple_routing.c  compat.h  config.h.in  conn.c  conn.h  connection.c  connection.h  constraint_aware_append.c  constraint_aware_append.h  continuous_agg.c  copy.c  copy.h  (+53 more)
src/opentelemetry/: CMakeLists.txt  opentelemetry-c.cpp  opentelemetry-c.h
test/: CMakeLists.txt  postgresql.conf.in  runner.sh  runner_cleanup_output.sh  test-defs.cmake
test/src/: CMakeLists.txt
test/src/bgw/: scheduler_mock.c
test/src/loader/: init.c
test/src/net/: CMakeLists.txt  conn_mock.h  test_conn.c  test_http.c  uri.c
test/src/telemetry/: CMakeLists.txt  test_telemetry.c
(+283 files in other folders)
